<resources>
    <string name="app_name">SAAX</string>
    <string name="alert_title">SAAX Disclaimer</string>
    <string name="disclaimer">This module can alter the built-in safety features that Google has implemented in Android Auto. By clicking \"I Agree\", you agree that YOU, and only YOU, are solely responsible for any negative repercussions that may result. This can include injury to yourself and/or others, property damage, or loss of life. Under no circumstances is the author of this module responsible for its use!"</string>
    <string name="headerTitle">Sensible Android Auto:Xposed - Settings</string>
    <string name="vsb1summary">Maximum # of screen taps while vehicle in motion before warning screen</string>
    <string name="vsb1title">Screen Taps</string>
    <string name="vsb2summary">Maximum speed before gps/wheel sensors think vehicle is parked</string>
    <string name="vsb2title">Max Parked Sensor Speed</string>
    <string name="vsb3summary">Number of pages shown in list views</string>
    <string name="vsb3title">Unlimited Browse Pages</string>

    <string name="debug_divider">Debugging Options</string>

    <string name="debug_title">Debug</string>
    <string name="debug_summary">Enable debug output to log to Xposed error.log</string>
    <string name="bgoff">AA will use default background image</string>
    <string name="bgon">Override AA background image</string>
    <string name="bgtitle">Custom AA background image</string>
    <string name="bgpickertitle">Select background image</string>
    <string name="bgpickersumm">Browse your storage and select an image file</string>
    <string name="cb1title">Content rate limiting</string>
    <string name="cb1summaryon">Content rate limit disabled</string>
    <string name="cb1summaryoff">Content rate limit enabled</string>
    <string name="cb2summaryon">Passenger Mode Feature Enabled</string>
    <string name="cb2summaryoff">Passenger Mode Feature Disabled</string>
    <string name="cb2title">Passenger Mode Feature</string>
</resources>
